[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/plasma.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Projectile.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=2]
radius = 0.255524

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[node name="Projectile" type="Spatial"]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]

[node name="Area" type="Area" parent="MeshInstance"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance/Area"]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
material_override = SubResource( 3 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="body_entered" from="MeshInstance/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_shape_entered" from="MeshInstance/Area" to="." method="_on_Area_body_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
